--- a/PrettyPrintNS/PrettyPrintNS.csproj
+++ b/PrettyPrintNS/PrettyPrintNS.csproj
@@ -10,6 +10,7 @@
     <PackageProjectUrl>https://github.com/Partiolainen/PrettyPrintNS</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Partiolainen/PrettyPrintNS</RepositoryUrl>
     <Description>Human friendly, textual representations of duration, file size and transfer rate using standard .NET types</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
